# HttpsServerOsquery

./: CMakeLists.txt  README.md
scripts/: start_server.sh
sources/: CMakeLists.txt
sources/httpskit/: CMakeLists.txt
sources/httpskit/apps/server/: CMakeLists.txt  main.cpp
sources/httpskit/libs/: CMakeLists.txt
sources/httpskit/libs/agentsManager/: CMakeLists.txt  agentsmanager.cpp  agentsmanager.h
sources/httpskit/libs/forwardManager/: CMakeLists.txt  forwardmanager.cpp  forwardmanager.h
sources/httpskit/libs/tlsServer/: CMakeLists.txt  serializer.cpp  serializer.h  tlsserver.cpp  tlsserver.h  tlssession.cpp  tlssession.h
